# autobattler_rust

./: CLAUDE.md  Cargo.toml  README.md
assets/data/: monsters.json  rounds.json  skills.json  units.json
src/: main.rs
src/game/: arena.rs  combat.rs  data_loader.rs  equipment.rs  mod.rs  monster.rs  party.rs  shop.rs  unit.rs  wave_gen.rs
src/rendering/: mod.rs  placeholder.rs
src/ui/: hud.rs  menu.rs  mod.rs  preparation.rs  shop_ui.rs  unit_selection.rs  wave_selection.rs
