[package]
name = "autobattler_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "autobattler"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optimize dependencies even in dev builds for playable framerates
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
